--- a/Sticky notes/Sticky notes.csproj
+++ b/Sticky notes/Sticky notes.csproj
@@ -330,6 +330,7 @@
     <Compile Include="Assets\HoloToolkit\Utilities\Tests\Scripts\PlaneTargetGroupPicker.cs" />
     <Compile Include="Assets\HoloToolkit\Utilities\Tests\Scripts\TextToSpeechManagerTest.cs" />
     <Compile Include="Assets\HoloToolkit\Utilities\Tests\Scripts\TextToSpeechOnTap.cs" />
+    <Compile Include="Assets\KeyBoardOutput.cs" />
     <Compile Include="Assets\NoteCommands.cs" />
   </ItemGroup>
   <ItemGroup>
